--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   "homepage": "https://github.com/IbrahemAtef/deployBank#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3"
   },
   "devDependencies": {
